--- a/Trinity.Mvc/Views/Members/DiscussionGroup.cshtml
+++ b/Trinity.Mvc/Views/Members/DiscussionGroup.cshtml
@@ -13,27 +13,8 @@
             </div>
 
             <div class="col-lg-9 vstack gap-4">
-                @if(Model.DiscussionGroup == null)
-                {
-                    <div class="row g-4">
-                        <div class="col text-center">
-                            <div class="card card-body">
-                                <div class="my-sm-5 py-sm-5">
-                                    <i class="display-1 text-muted bi bi-chat-square-text-fill"> </i>
-                                    <h4 class="mt-2 mb-3 text-body">You haven't created a discussion group.</h4>
-                                    <button class="btn btn-primary-soft my-3" type="button" data-bs-toggle="modal" data-bs-target="#saveDiscussionGroupModal">
-                                        <i class="fa-solid fa-plus me-1"></i>
-                                        Create 
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
-                else
-                {
-                    @await Html.PartialAsync("DiscussionGroups/_DiscussionGroupTabs", Model.DiscussionGroup)
-                }
+                <p>Add</p>
+                @* @await Html.PartialAsync("DiscussionGroups/_DiscussionGroupTabs", Model.DiscussionGroup) *@
             </div>
         </div>
     </div>
