--- a/Trinity.Mvc/Views/Account/Register.cshtml
+++ b/Trinity.Mvc/Views/Account/Register.cshtml
@@ -28,12 +28,8 @@
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                         <div class="mb-3 input-group-lg">
-                            <input asp-for="AvatarImageUpload" class="form-control" placeholder="Upload profile photo" type="file" accept="image/png, image/jpeg" />
-                            <span asp-validation-for="AvatarImageUpload" class="text-danger"></span>
-                        </div>
-                        <div class="mb-3 input-group-lg">
-                            <input asp-for="CoverImageUpload" class="form-control" placeholder="Upload cover photo" type="file" accept="image/png, image/jpeg" />
-                            <span asp-validation-for="CoverImageUpload" class="text-danger"></span>
+                            <input asp-for="ProfileImageUpload" class="form-control" placeholder="Upload profile photo" type="file" accept="image/png, image/jpeg" />
+                            <span asp-validation-for="ProfileImageUpload" class="text-danger"></span>
                         </div>
                         <div class="mb-3 input-group-lg">
                             <input asp-for="Password" class="form-control" placeholder="Enter Password" aria-required="true" />
