--- a/Trinity.Mvc/Views/Shared/Components/AuthorPosts/Default.cshtml
+++ b/Trinity.Mvc/Views/Shared/Components/AuthorPosts/Default.cshtml
@@ -11,7 +11,7 @@
                     <!-- Avatar -->
                     <div class="avatar avatar-story me-2">
                         <a href="#!"> 
-                            <img class="avatar-img rounded-circle" src="~/media/members/@(item.Author!.AvatarImage)" alt=""> 
+                            <img class="avatar-img rounded-circle" src="~/media/members/@(item.Author!.ProfileImage)" alt=""> 
                         </a>
                     </div>
                     <!-- Info -->
