--- a/Trinity.Mvc/Views/Shared/Components/HomeProjects/Default.cshtml
+++ b/Trinity.Mvc/Views/Shared/Components/HomeProjects/Default.cshtml
@@ -6,8 +6,8 @@
             <div class="col-12 mb-3">
                 <div class="d-sm-flex justify-content-between">
                     <!-- Title -->
-                    <h4>Explore products </h4>
-                    <a class="btn btn-link" href="#">View all products</a>
+                    <h4>Explore projects </h4>
+                    <a class="btn btn-link" asp-controller="Projects" asp-action="Index">View all projects</a>
                 </div>
             </div>
         </div>
