--- a/Trinity.Mvc/Views/Shared/Positions/_PositionTabs.cshtml
+++ b/Trinity.Mvc/Views/Shared/Positions/_PositionTabs.cshtml
@@ -39,7 +39,7 @@
                     <div class="d-md-flex align-items-center mb-4">
                         <!-- Avatar -->
                         <div class="avatar me-3 mb-3 mb-md-0">
-                            <a href="#!"> <img class="avatar-img rounded-circle" src="~/media/members/@item.User!.AvatarImage" alt=""> </a>
+                            <a href="#!"> <img class="avatar-img rounded-circle" src="~/media/members/@item.User!.ProfileImage" alt=""> </a>
                         </div>
                         <!-- Info -->
                         <div class="w-100">
