--- a/Trinity.Mvc/Views/Shared/Projects/_ProjectHeader.cshtml
+++ b/Trinity.Mvc/Views/Shared/Projects/_ProjectHeader.cshtml
@@ -12,7 +12,7 @@
                 <!-- Avatar -->
                 <div class="avatar avatar-xxl mt-n5 mb-3">
                     <a href="#">
-                        <img class="avatar-img rounded-circle border border-white border-3" src="~/media/members/@(Model.Manager!.AvatarImage)" alt="">
+                        <img class="avatar-img rounded-circle border border-white border-3" src="~/media/members/@(Model.Manager!.ProfileImage)" alt="">
                     </a>
                 </div>
             </div>
