--- a/Trinity.Mvc/Views/_ViewImports.cshtml
+++ b/Trinity.Mvc/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using System.Web
 @using Trinity.Mvc
+@using Trinity.Mvc.Data
 @using Trinity.Mvc.Models
 @using Trinity.Mvc.Domain
 @using Trinity.Mvc.Extensions
