--- a/Trinity.Mvc/Views/Shared/Components/ConnectionRequests/Default.cshtml
+++ b/Trinity.Mvc/Views/Shared/Components/ConnectionRequests/Default.cshtml
@@ -7,7 +7,7 @@
             <div class="hstack gap-2 mb-3">
                 <!-- Avatar -->
                 <div class="avatar">
-                    <a href="#!"><img class="avatar-img rounded-circle" src="~/media/members/@(request.Requester!.AvatarImage)" alt=""></a>
+                    <a href="#!"><img class="avatar-img rounded-circle" src="~/media/members/@(request.Requester!.ProfileImage)" alt=""></a>
                 </div>
                 <!-- Title -->
                 <div class="overflow-hidden">
