--- a/Trinity.Mvc/Views/Shared/Components/RecommendedUsers/Default.cshtml
+++ b/Trinity.Mvc/Views/Shared/Components/RecommendedUsers/Default.cshtml
@@ -9,7 +9,7 @@
                 <div class="card-body p-2 pb-0">
                     <div class="avatar avatar-xl">
                         <a href="#!">
-                            <img class="avatar-img rounded-circle" src="~/media/members/@user.AvatarImage" alt="">
+                            <img class="avatar-img rounded-circle" src="~/media/members/@user.ProfileImage" alt="">
                         </a>
                     </div>
                     <h6 class="card-title mb-1 mt-3"> <a href="#!"> @user.FullName </a></h6>
