--- a/Trinity.Mvc/Views/Shared/Components/SaveDiscussionGroup/Default.cshtml
+++ b/Trinity.Mvc/Views/Shared/Components/SaveDiscussionGroup/Default.cshtml
@@ -22,9 +22,9 @@
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
-                        <label asp-for="PhotoUpload" class="control-label"></label>
-                        <input asp-for="PhotoUpload" class="form-control" type="file" />
-                        <span asp-validation-for="PhotoUpload" class="text-danger"></span>
+                        <label asp-for="CategoryId" class="control-label"></label>
+                        <select asp-for="CategoryId" class ="form-select" asp-items="ViewBag.CategoryId"></select>
+                        <span asp-validation-for="CategoryId" class="text-danger"></span>
                     </div>
                 </form>
             </div>
