--- a/Trinity.Mvc/Views/Shared/Components/SendInvitation/Default.cshtml
+++ b/Trinity.Mvc/Views/Shared/Components/SendInvitation/Default.cshtml
@@ -18,7 +18,7 @@
                                 <div class="card-body p-2 pb-0">
                                     <div class="avatar avatar-xl">
                                         <a href="#!">
-                                            <img class="avatar-img rounded-circle" src="~/media/members/@item.Supporter!.AvatarImage" alt="">
+                                            <img class="avatar-img rounded-circle" src="~/media/members/@item.Supporter!.ProfileImage" alt="">
                                         </a>
                                     </div>
                                     <h6 class="card-title mb-1 mt-3"> <a href="#!"> @item.Supporter!.FullName </a></h6>
