--- a/Trinity.Mvc/Views/Shared/Events/_EventTabs.cshtml
+++ b/Trinity.Mvc/Views/Shared/Events/_EventTabs.cshtml
@@ -60,7 +60,7 @@
                             <div class="hstack gap-2 mb-3">
                                 <!-- Avatar -->
                                 <div class="avatar">
-                                    <a href="#!"><img class="avatar-img rounded-circle" src="~/media/members/@(item.Attendee!.AvatarImage)" alt=""></a>
+                                    <a href="#!"><img class="avatar-img rounded-circle" src="~/media/members/@(item.Attendee!.ProfileImage)" alt=""></a>
                                 </div>
                                 <!-- Title -->
                                 <div class="overflow-hidden">
@@ -80,7 +80,7 @@
                             <div class="hstack gap-2 mb-3">
                                 <!-- Avatar -->
                                 <div class="avatar">
-                                    <a href="#!"><img class="avatar-img rounded-circle" src="~/media/members/@(item.Member!.AvatarImage)" alt=""></a>
+                                    <a href="#!"><img class="avatar-img rounded-circle" src="~/media/members/@(item.Member!.ProfileImage)" alt=""></a>
                                 </div>
                                 <!-- Title -->
                                 <div class="overflow-hidden">
