--- a/Trinity.Mvc/Views/Shared/_Layout.cshtml
+++ b/Trinity.Mvc/Views/Shared/_Layout.cshtml
@@ -70,6 +70,7 @@
     <!-- Plugins CSS -->
 	<link rel="stylesheet" type="text/css" href="~/assets/vendor/font-awesome/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css">
+	<link rel="stylesheet" type="text/css" href="~/assets/vendor/OverlayScrollbars-master/css/OverlayScrollbars.min.css">
     @await RenderSectionAsync("Stylesheets", required: false)
 
     <!-- Theme CSS -->
@@ -82,14 +83,18 @@
 <body>
 	<partial name="_Toast" />
     @RenderBody()
+	@* @await Component.InvokeAsync("ChatBox") *@
+
+	<script src="~/lib/signalr/signalr.min.js"></script>
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="~/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/assets/vendor/OverlayScrollbars-master/js/OverlayScrollbars.min.js"></script>
     @await RenderSectionAsync("JavaScripts", required: false)
     
     <!-- Theme Functions -->
-    
-	<script src="~/lib/signalr/signalr.min.js"></script>
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/assets/js/functions.js"></script>
+	
 	<!--<script src="~/js/site.js"></script> -->
     @await RenderSectionAsync("Scripts", required: false)
 </body>
