--- a/Trinity.Mvc/Views/Account/Register.cshtml
+++ b/Trinity.Mvc/Views/Account/Register.cshtml
@@ -44,7 +44,7 @@
                         </div>
             
                         <p class="mb-0 mt-3 text-center">
-                            &copy;2023 <a target="_blank" href="#">Noah Community Action Network.</a> All rights reserved
+                            &copy;2023 <a target="_blank" href="#">Trinity Community Action Network.</a> All rights reserved
                         </p>
                     </form>
                 </div>
