--- a/Trinity.Mvc/Views/Shared/_Layout.cshtml
+++ b/Trinity.Mvc/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Noah - @ViewData["Title"]</title>
+    <title>Trinity - @ViewData["Title"]</title>
 
     <!-- Dark mode -->
 	<script>
