--- a/Trinity.Mvc/Views/Shared/Members/_MemberNav.cshtml
+++ b/Trinity.Mvc/Views/Shared/Members/_MemberNav.cshtml
@@ -58,7 +58,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light-emphasis" href="#">
+                            <a class="nav-link text-light-emphasis" asp-controller="Members" asp-action="Calendar" asp-route-id="@(User.FindFirst("UserId")!.Value)">
                                 <i class="fa-solid fa-calendar-days me-2"></i>
                                 Calendar
                             </a>
