added connection features

--- a/Trinity.Mvc/Views/Shared/Components/ConnectionRequests/Default.cshtml
+++ b/Trinity.Mvc/Views/Shared/Components/ConnectionRequests/Default.cshtml
@@ -16,7 +16,7 @@
                 </div>
                 <!-- Button -->
                 <a class="btn btn-cta-soft rounded-circle icon-md ms-auto" href="#"><i class="fa-solid fa-minus"> </i></a>
-                <a class="btn btn-primary-soft rounded-circle icon-md" href="#"><i class="fa-solid fa-plus"> </i></a>
+                <a class="btn btn-primary-soft rounded-circle icon-md" asp-controller="Connections" asp-action="AddConnection" asp-route-requesterId="@request.RequesterId"><i class="fa-solid fa-plus"> </i></a>
             </div>
         </div>
     }
