--- a/Trinity.Mvc/Views/Shared/Members/_ConnectionTabs.cshtml
+++ b/Trinity.Mvc/Views/Shared/Members/_ConnectionTabs.cshtml
@@ -14,25 +14,7 @@
 
         <div class="tab-content mb-0 pb-0">
             <div class="tab-pane fade show active" id="tab-1">
-                <div class="d-md-flex align-items-center mb-4">
-                    <!-- Avatar -->
-                    <div class="avatar me-3 mb-3 mb-md-0">
-                        <a href="#!"> <img class="avatar-img rounded-circle" src="~/assets/images/avatar/01.jpg" alt="">
-                        </a>
-                    </div>
-                    <!-- Info -->
-                    <div class="w-100">
-                        <div class="d-sm-flex align-items-start">
-                            <h6 class="mb-0"><a href="#!">Lori Ferguson </a></h6>
-                            <p class="small ms-sm-2 mb-0">Full Stack Web Developer</p>
-                        </div>
-                    </div>
-                    <!-- Button -->
-                    <div class="ms-md-auto d-flex">
-                        <button class="btn btn-danger-soft btn-sm mb-0 me-2"> Remove </button>
-                        <button class="btn btn-primary-soft btn-sm mb-0"> Message </button>
-                    </div>
-                </div>
+               @await Component.InvokeAsync("UserConnections")
             </div>
             <div class="tab-pane fade" id="tab-2">
                 @await Component.InvokeAsync("ConnectionRequests")
